[build-system]
requires = ["flit-core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "claude-backup"
readme = "README.md"
requires-python = ">=3.10"
license = "CC0-1.0"
authors = [{name = "Ultrathinkers Anonymous", email = "ultrathink@twilligon.com"}]
keywords = ["claude", "backup", "ai", "chat", "export", "archive"]
dependencies = [
    "aiohttp",
    "browser-cookie3",
    "fake-useragent",
    "platformdirs",
    "yarl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]

[project.scripts]
claude-backup = "claude_backup:main"

[project.urls]
Repository = "https://github.com/twilligon/claude-backup"
Issues = "https://github.com/twilligon/claude-backup/issues"
